refactor: Remove caching infrastructure and add integration tests for the administrative area controller.